--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 
 body {
   font-family: Figtree;
+  line-height: 1.5;
   background-color: var(--clr-main-bg);
   color: var(--fc-dark);
   display: flex;
@@ -70,16 +71,15 @@ body {
 
 .card__title {
   font-size: var(--fs-large);
-  line-height: 1.5;
 }
 
 .card__title:hover {
   color: var(--clr-main-bg);
+  font-size: var(--fs-bold);
 }
 
 .card__desc {
   font-size: var(--fs-medium);
-  line-height: 1.5rem;
   color: var(--fc-light);
 }
 
