--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
 
 body {
   font-family: Figtree;
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-medium);
   line-height: 1.5;
   background-color: var(--clr-main-bg);
   color: var(--fc-dark);
@@ -29,6 +31,9 @@ body {
 
 .card {
   margin: auto;
+  display: flex;
+  flex-direction: column;
+
   padding: 1.5rem;
   box-sizing: border-box;
   width: 24rem;
@@ -50,7 +55,6 @@ body {
 
 .card__img {
   border-radius: 10px;
-  width: 100%;
 }
 
 .card__content > * + * {
@@ -71,11 +75,11 @@ body {
 
 .card__title {
   font-size: var(--fs-large);
+  font-weight: 800;
 }
 
 .card__title:hover {
   color: var(--clr-main-bg);
-  font-size: var(--fs-bold);
 }
 
 .card__desc {
@@ -91,11 +95,10 @@ body {
 .card__avatar-img {
   height: 2rem;
   border-radius: 50%;
-  margin-right: 1rem;
+  margin-right: 0.75rem;
 }
 
 .card__avatar-name {
-  font-weight: var(--fw-regular);
   font-size: var(--medium);
 }
 
